--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Navigation Tabs -->
         <div class="tabs">
             <button class="tab active" onclick="switchTab('live')">📊 Live Readings</button>
-            <button class="tab" onclick="switchTab('history')">📈 Historical Data</button>
+            <button class="tab" onclick="switchTab('history')">📈 Past Readings</button>
             <button class="tab" onclick="switchTab('datatable')">📋 Data Table</button>
             <button class="tab" onclick="switchTab('alerts')">🔔 Alerts</button>
             <button class="tab" onclick="switchTab('control')">🎛️ Controls</button>
@@ -125,7 +125,7 @@
                 </div>
             </div>
 
-            <!-- Historical Data Tab -->
+            <!-- Past Readings Tab -->
             <div id="history" class="tab-content">
                 <h2 style="margin-bottom: 20px;">📈 Historical Trends (ThingSpeak)</h2>
 
@@ -398,15 +398,15 @@
                 <div class="info-section">
                     <h3>Key Features</h3>
                     <ul>
-                        <li>✅ Real-time dual-axis sun tracking</li>
-                        <li>✅ Cloud-based monitoring via ThingSpeak</li>
-                        <li>✅ Smart cleaning alerts using dual-sensor validation</li>
-                        <li>✅ Automatic power saving during night/cloudy periods</li>
-                        <li>✅ Remote battery management</li>
-                        <li>✅ Comprehensive data logging and visualization</li>
-                        <li>✅ Cross-platform web dashboard (mobile & desktop)</li>
-                        <li>✅ Real-time alerts and notifications</li>
-                        <li>✅ Exportable data tables (CSV/Excel)</li>
+                        <li> Real-time dual-axis sun tracking</li>
+                        <li> Cloud-based monitoring via ThingSpeak</li>
+                        <li> Smart cleaning alerts using dual-sensor validation</li>
+                        <li> Automatic power saving during night/cloudy periods</li>
+                        <li> Remote battery management</li>
+                        <li> Comprehensive data logging and visualization</li>
+                        <li> Cross-platform web dashboard (mobile & desktop)</li>
+                        <li> Real-time alerts and notifications</li>
+                        <li> Exportable data tables (CSV/Excel)</li>
                     </ul>
                 </div>
 
@@ -436,3 +436,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
